--- a/手写题/手写题.md
+++ b/手写题/手写题.md
@@ -1,4 +1,4 @@
-# 手写题
+====# 手写题
 [TOC]
 
 ## 函数柯里化（实现 sum(1,2)(3)()）★★★
@@ -167,25 +167,33 @@ function fn(data) {
 ## 如何在不引入第三个中间变量的情况下，完成两个数字的交换。
 方案1
 ```js
-arr[j + 1] = arr[j + 1] + arr[j];
-arr[j] = arr[j + 1] - arr[j];
-arr[j + 1] = arr[j + 1] - arr[j];
+a = a + b;
+b = a - b;
+a = a - b;
+
 ```
 方案2
 ```js
-arr[j + 1] = arr[j] - arr[j + 1];
-arr[j] = arr[j] - arr[j + 1];
-arr[j + 1] = arr[j + 1] + arr[j];
+a = b - a;
+b = b - a;
+a = b + a;
+
 ```
 
 > 方案1和2都有可能导致数字越界。
 
 
 方案3： 位运算
+
+任意数和0进行异或运算，都等于自己本身
+
 ```js
-arr[i] = arr[i] ^ arr[j];
-arr[j] = arr[j] ^ arr[i];
-arr[i] = arr[i] ^ arr[j];
+a = a ^ b;
+b = a ^ b;  // 结合律 b = a ^ (b ^ b)。 相当于 b = a ^ 0 = a
+a = a ^ b;  
+// 结合律和交换律，此时右侧的 a = a ^ b, b = a
+// 所以 a = a ^ b ^ a = (a ^ a) ^ b = 0 ^ b = b
+
 ```
 
 
