--- a/手写题/手写题.md
+++ b/手写题/手写题.md
@@ -1,4 +1,4 @@
-====# 手写题
+# 手写题
 [TOC]
 
 ## 函数柯里化（实现 sum(1,2)(3)()）★★★
@@ -8,22 +8,43 @@ function sum(...args1) {
 	let x = 0;
 	// 资料上没有加这个判断，是否有必要加这个判断？
   if (args1.length > 0) {
-  		x = args1.reduce((prev, next) => {return prev+next;})
+  		x = args1.reduce((prev, next) => {return prev + next;})
   }
   return function(...args2) {
     // 如果第二个（）内的参数为空，这样写会报语法错误。
     if (args2.length == 0) return x;
     
-    return sum(x, ...args2)；
-    // 原来的写法，我觉得再调用一次reduce多余，给改成了上面的写法，不知道我的写法有没有什么问题？
-    // let y = args2.reduce((prev, next) => {return prev+next;})
-    // return sum(x+y)
+    // return sum(x, ...args2); // 这种写法会加大调用栈的深度，更容易栈溢出。
+    let y = args2.reduce((prev, next) => {return prev+next;})
+    return sum(x+y)
   }
 }
 
 console.log(sum(1,2,2,5)(7)()) // 17
 
 ```
+
+## 实现 add(1)(2)(3)
+
+```js
+const curry = (fn, ...args) => {
+ return args.length >= fn.length
+    ? fn(...args)
+    : (..._args) => curry(fn, ...args, ..._args);
+};
+
+function add1(x, y, z) {
+  return x + y + z;
+}
+
+const add = curry(add1);
+console.log(add(1, 2, 3));
+console.log(add(1)(2)(3));
+console.log(add(1, 2)(3));
+console.log(add(1)(2, 3));
+
+```
+
 
 ------
 
@@ -155,24 +176,63 @@ function fn(data) {
 
 ## 实现 Promise ★★★
 ## 实现 Promise.all() ★★★
+
+### 使用场景
+* 多个异步任务，互相之间的结果没有直接联系
+* 但是共同的结果有联系。比如有一个失败，那么all的结果就是失败
+* 多个文件上传和下载
+
+
 ## 实现 Promise.race() ★
 ## 实现 EventEmitter 订阅监听模式 ★★
 ## setTimout 实现 setInterval ★
 ## 深拷贝 ★★★
 ## 数组拍平 ★★★
+
+### 新特性 flat
+```js
+const arr1 = [0, 1, 2, [3, 4]];
+
+console.log(arr1.flat());
+// expected output: [0, 1, 2, 3, 4]
+
+const arr2 = [0, 1, 2, [[[3, 4]]]];
+
+console.log(arr2.flat(2));
+// expected output: [0, 1, 2, [3, 4]]
+```
+### 新特性 flatMap
+```js
+arr1.map(x => x.split(" "));
+// [["it's","Sunny","in"],[""],["California"]]
+
+arr1.flatMap(x => x.split(" "));
+// ["it's","Sunny","in", "", "California"]
+
+// Infinity 关键字作为参数时，无论多少层嵌套，都会转为一维数组
+animals.flat(Infinity);
+
+// 传入 <=0 的整数将返回原数组，不“拉平”
+animals.flat(0);
+animals.flat(-10);
+// 如果原数组有空位，flat()方法会跳过空位。
+["🐷", "🐶", "🐂", "🐎",,].flat();
+```
+
 ## 数组去重 ★★★
+
 ## 去除字符串首尾空格 ★
 
 
 ## 如何在不引入第三个中间变量的情况下，完成两个数字的交换。
-方案1
+### 方案1
 ```js
 a = a + b;
 b = a - b;
 a = a - b;
 
 ```
-方案2
+### 方案2
 ```js
 a = b - a;
 b = b - a;
@@ -183,7 +243,7 @@ a = b + a;
 > 方案1和2都有可能导致数字越界。
 
 
-方案3： 位运算
+### 方案3： 位运算
 
 任意数和0进行异或运算，都等于自己本身
 
@@ -195,5 +255,13 @@ a = a ^ b;
 // 所以 a = a ^ b ^ a = (a ^ a) ^ b = 0 ^ b = b
 
 ```
+
+### 方案4：JS ES6新特性 解构赋值
+
+```js
+let a = 1, b= 2;
+[a, b] = [b, a]; // a 2  b 1
+```
+
 
 
