--- a/手写题/DeepClone/实现深拷贝.md
+++ b/手写题/DeepClone/实现深拷贝.md
@@ -57,6 +57,7 @@ function deepCloneOfRecursion(source, hashMap=new WeakMap()) {
 
 function isObject(value) {
   return typeof value === "object" && value !== null;
+  // 如果value是函数类型，使用value instanceof object判断为true.
 }
 
 function getEnumerablePropertyKeys(obj) {
@@ -70,7 +71,9 @@ function getEnumerablePropertyKeys(obj) {
 	
 ```js
 function deepCloneOfQueue(source) {
+// 第一步：如果不是对象类型或者为null，直接返回。
   if (!isObject(source)) return source;
+  // 
   const node = {
     target: Array.isArray(source) ? [] : {}, // 克隆出来的新对象
     cloned: source // cloned是被克隆的意思,指向被克隆的对象.
@@ -80,13 +83,16 @@ function deepCloneOfQueue(source) {
   const hashMap = new WeakMap([[node.cloned, node.target]]);
   // 遍历队列，队列中没有元素时，说明所有属性都已拷贝。
   while(queue.length > 0) {
+  
     const {target, cloned } = queue.pop();
+    
     const keys = getEnumerablePropertyKeys(cloned);
     
     keys.forEach(key => {
       const value = cloned[key];
       if (isObject(value)) {
         if (hashMap.has(value)) {
+        // 第二步：如果hashMap中存在source，直接返回哈希表中对应的值。可以解决循环引用和引用丢失问题。
           target[key] = hashMap.get(value);
         } else {
           target[key] = Array.isArray(value) ? [] : {};
