--- a/浏览器/缓存.md
+++ b/浏览器/缓存.md
@@ -44,6 +44,8 @@
 
 • 对于大文件来说，大概率是不存储在内存中的，反之优先存储在内存中
 • 当前系统内存使用率高的话，文件优先存储进硬盘
+		根据当前的内存使用率决定的，如果内存使用率很高，要缓存的资源较大，浏览器就会将该资源直接缓存到硬盘中，但是如果内存充足，浏览器会优先将资源缓存到内存中，因为内存相比于硬盘，没有I/O操作，读取速度更快。
+
 
 
 ### Push Cache
@@ -154,9 +156,18 @@ RFC7234
 	•	common + shift + R (称为 hard refresh） 会重新向服务器请求资源文件， 返回200状态码 
 	◦	请求会加上一个Cache-Control:no-cache的标识来表明突破cache-control的限制， 
 
+## 应用场景
+
+### 强缓存：
+对于有大量静态资源的网页，一定要利用强缓存，提高响应速度。
+通常的做法是，为这些静态资源全部配置一个**超时时间超长**的Expires或Cache-Control，这样用户在访问网页时，只会在第一次加载时从服务器请求静态资源，其它时候只要缓存没有失效并且用户没有强制刷新的条件下都会从自己的缓存中加载，比如前面提到过的京东首页缓存的资源，它的缓存过期时间都设置到了2026年：
+
+强缓存还有一点需要注意的是，通常都是**针对静态资源使用，动态资源需要慎用**，
+除了服务端页面可以看作动态资源外，那些**引用静态资源的html也可以看作是动态资源**，如果这种html也被缓存，当这些html更新之后，可能就没有机制能够通知浏览器这些html有更新，尤其是前后端分离的应用里，页面都是纯html页面，每个访问地址可能都是直接访问html页面，这些页面通常不加强缓存，以保证浏览器访问这些页面时始终请求服务器最新的资源。
+
+### 协商缓存
+协商缓存需要配合强缓存使用，你看前面这个截图中，除了Last-Modified这个header，还有强缓存的相关header，因为如果不启用强缓存的话，协商缓存根本没有意义。
 
 
-
-
-
+如果资源已经被浏览器缓存下来，在缓存失效之前，再次请求时，默认会先检查是否命中强缓存，如果强缓存命中则直接读取缓存，如果强缓存没有命中则发请求到服务器检查是否命中协商缓存，如果协商缓存命中，则告诉浏览器还是可以从缓存读取，否则才从服务器返回最新的资源。
 
